[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "imagekit"
version = "0.2.1"
description = "A collection of image utility methods."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "ajrlewis", email = "hello@ajrlewis.com" }
]
dependencies = [
    "numpy==1.25.2",
    "packaging==23.1",
    "Pillow>=10.0.0",
    "pillow-heif==0.13.0",
    "pytesseract==0.3.10",
    "scipy==1.11.2",
    "qrcode==7.4.2",
    "loguru==0.7.2",
    "PyPDF2==3.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]
